# humetric-api

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/humetric_api/: __init__.py  _runtime.py  app.py  auth_deps.py  auth_dtos.py  auth_routes.py  deps.py  dtos.py  errors.py  routes.py
tests/: conftest.py  test_auth_routes.py  test_query_endpoint.py
